kubernetes/go-app/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-deployment
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app
        image: joonbak/go-app:latest
        ports:
        - containerPort: 8000
