kubernetes/go-app/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
  namespace: dev
spec:
  selector:
    app: go-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
